fix right dropdown on small screens

--- a/BForms.Docs/Scripts/BForms/Stylesheets/bforms.grid.scss
+++ b/BForms.Docs/Scripts/BForms/Stylesheets/bforms.grid.scss
@@ -988,10 +988,6 @@ a.btn {
 			margin-bottom: 10px;
 		}
 	}
-	.dropdown-menu {
-		left: 0 !important;
-		right: auto !important;
-	}
 }
 
 @media (min-width: 960px) { /* Hover effects for desktop only*/
